Fixed z-index overlay maggiore età

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -153,5 +153,5 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 9999;
+    z-index: 2147483647 !important;
 }
